restart the project

--- a/src/app/announce/long-stay/long-stay.component.html
+++ b/src/app/announce/long-stay/long-stay.component.html
@@ -7,6 +7,7 @@
           <div class="contain">
             <P>{{'long_stay.contain1'|translate}} </P>
             <p>{{'long_stay.contain2'|translate}}</p>
+            <button mat-button (click)="getPrice()">{{'long_stay.more_information'|translate}}</button>
           </div>
         </div>
       </div>
