--- a/src/app/coffee-bar/coffee-bar.component.scss
+++ b/src/app/coffee-bar/coffee-bar.component.scss
@@ -1,21 +1,4 @@
-div.txtbox {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 10pt;
-    line-height: 25px;
-    font-weight: normal;
-    color: #4E4E4E;
-    display: block;
-    margin: 0px;
-    border-bottom-width: 1px;
-    border-bottom-style: dashed;
-    border-bottom-color: #BFB7AE;
-    position: relative;
-    padding: 10px;
+strong {
+  font-size: 18px;
+  color: #54760E;
 }
- 
-  strong {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 10pt;
-    font-weight: bold;
-    color: #54760E;
-  }
