--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
     <div style="font-size: 12px;">
-        測試用
+            <a href="https://docs.google.com/document/d/1WBJwhB2F3M2n7wUPZzj-5HufyyI1qyRwnxMPBQVDLDQ/edit?usp=sharing" style="text-decoration:none; color:white">測試用（開發中）</a>
+        
         <!-- <button mat-icon-button (click)="onToggleLeftnav()">
             <mat-icon>menu</mat-icon>
         </button> -->
