--- a/src/app/departure/departure.component.html
+++ b/src/app/departure/departure.component.html
@@ -1,80 +1,89 @@
 <div class="content" [@place]="isDivVisible">
-    <ul class="explain">
-            <li>
-                    <h1>A.{{'transport.by_car'|translate}}</h1>
-                    <h2>
-                            <strong>{{'transport.taipei'|translate}}</strong> {{'transport.taipei_path'|translate}}
-                            <br />
-                            <strong>{{'transport.taoyua'|translate}}</strong>　{{'transport.taoyua_path'|translate}}
-                            <br />
-                            <strong>{{'transport.kaosiung'|translate}}</strong>　{{'transport.kaosiung_path'|translate}}
-                            <br />
-                            <strong>{{'transport.taichung'|translate}}</strong>　{{'transport.taichung_path'|translate}}
-                            <br />
-                            <strong>{{'transport.hualien'|translate}}</strong>　{{'transport.hualien_path'|translate}}</h2>
-            </li>
+        <ul class="explain">
+                <li>
+                        <article>A.{{'transport.by_car'|translate}}</article>
+                        <p>
+                                <strong>{{'transport.taipei'|translate}}</strong> {{'transport.taipei_path'|translate}}
+                                <br />
+                                <strong>{{'transport.taoyua'|translate}}</strong>　{{'transport.taoyua_path'|translate}}
+                                <br />
+                                <strong>{{'transport.kaosiung'|translate}}</strong>　{{'transport.kaosiung_path'|translate}}
+                                <br />
+                                <strong>{{'transport.taichung'|translate}}</strong>　{{'transport.taichung_path'|translate}}
+                                <br />
+                                <strong>{{'transport.hualien'|translate}}</strong>　{{'transport.hualien_path'|translate}}
+                                <br />
+                               
+                        </p>
+                </li>
 
-            <li>
-                    <h1>B.{{'transport.by_bus'|translate}}</h1>
-                    <h2>
-                            <font color=red>
-                                    <strong>{{'transport.kuo-kuang'|translate}}</strong>
-                                    <br /> {{'transport.yilan_wuling'|translate}}
-                                    <br /> {{'transport.wuling_yilan'|translate}}
-                                    <br /> {{'transport.luodong_wuling'|translate}}
-                                    <br /> {{'transport.wuling_luodong'|translate}}
-                                    <br />
-                            </font>
+                <li>
+                        <article>  B.{{'transport.by_bus'|translate}} </article>
+                        <p>
+                                <font color=red>
+                                        <strong>{{'transport.kuo-kuang'|translate}}</strong>
+                                        <br /> {{'transport.yilan_wuling'|translate}}
+                                        <br /> {{'transport.wuling_yilan'|translate}}
+                                        <br /> {{'transport.luodong_wuling'|translate}}
+                                        <br /> {{'transport.wuling_luodong'|translate}}
+                                        <br />
+                                </font>
 
-                            <strong>{{'transport.kao_kuang_roadmap'|translate}}:</strong>
-                            <a href="http://www.kingbus.com.tw/ticketPriceResult.php?sid=27" target="_blank">[1751]</a>、
-                            <a href="http://www.kingbus.com.tw/ticketPriceResult.php?sid=29" target="_blank">[1764]</a>
-                            <br />
-                            <strong>{{'transport.kao_kuang_fee'|translate}}:</strong>
-                            <a href="http://www.kingbus.com.tw/uploadfile/fileroute_list_price1/1751A.jpg" target="_blank">[1751]</a>、
-                            <a href="http://www.kingbus.com.tw/uploadfile/fileroute_list_price1/1764A.jpg" target="_blank">[1764]</a>
-                            <br />
+                                <strong>{{'transport.kao_kuang_roadmap'|translate}}:</strong>
+                                <a href="http://www.kingbus.com.tw/ticketPriceResult.php?sid=31" target="_blank">[1751]</a>、
+                                <a href="http://www.kingbus.com.tw/ticketPriceResult.php?sid=33" target="_blank">[1764]</a>
+                                <br />
+                                <strong>{{'transport.kao_kuang_fee'|translate}}:</strong>
+                                <a href="http://www.kingbus.com.tw/uploadfile/fileroute_list_price1/1751A.jpg" target="_blank">[1751]</a>、
+                                <a href="http://www.kingbus.com.tw/uploadfile/fileroute_list_price1/1764A.jpg" target="_blank">[1764]</a>
+                                <br />
 
-                            <br />
-                            <font color=red>
-                                    <strong>{{'transport.fengyuan_bus'|translate}}</strong>
-                                    <br /> {{'transport.fengyuan_wuling'|translate}}
-                                    <br /> {{'transport.wuling_fengyuan'|translate}}
-                                    <br />
-                            </font>
-                            <strong>{{'transport.fengyuan_website'|translate}}:</strong>
-                            <a href="http://www.fybus.com.tw/bus8.htm" target="_blank">http://www.fybus.com.tw/bus8.htm</a>
-                            <br/>
-                            <strong>{{'transport.advice'|translate}}</strong>
-                            <br />
-                            <br />
-                            <font color=red>
-                                    <strong>{{'transport.ego_bus'|translate}}</strong>
-                                    <br /> {{'transport.ego_taipei_wuling'|translate}}
-                                    <br /> {{'transport.ego_wuling_taipei'|translate}}
-                                    <br />
-                                    <br />
+                                <br />
+                                <font color=red>
+                                        <strong>{{'transport.fengyuan_bus'|translate}}</strong>
+                                        <br /> {{'transport.fengyuan_wuling'|translate}}
+                                        <br /> {{'transport.wuling_fengyuan'|translate}}
+                                        <br />
+                                </font>
+                                <strong>{{'transport.fengyuan_website'|translate}}:</strong>
+                                <a href="http://www.fybus.com.tw/bus8.htm" target="_blank">http://www.fybus.com.tw/bus8.htm</a>
+                                <br/>
+                               
+                                <br />
 
-                                    <strong>{{'transport.bear_bus'|translate}}</strong>
-                                    <br /> {{'transport.bear_taipei_wuling'|translate}}
-                                    <br /> {{'transport.bear_wuling_taipei'|translate}}
-                                    <br />
-                                    <br/>
+                        </p>
+                </li>
+                <li>
+                        <article>C.{{'transport.by_van'|translate}}</article>
+                        <p>
+                                <font color=red>
+                                        <strong>{{'transport.ego_bus'|translate}}</strong>
+                                        <br /> {{'transport.ego_taipei_wuling'|translate}}
+                                        <br /> {{'transport.ego_wuling_taipei'|translate}}
+                                        <br />
+                                        <br />
+                                        <strong>{{'transport.lion_bus'|translate}}</strong>
+                                        <br /> {{'transport.lion_taipei_wuling'|translate}}
+                                        <br /> {{'transport.lion_wuling_taipei'|translate}}
+                                        <br />
+                                        <strong>{{'transport.lion_website'|translate}}:</strong>
+                                        <a href="https://www.liontravel.com/promotion/bus/forest-tour/wuling-tour.html" target="_blank">https://www.liontravel.com/promotion/bus/forest-tour/wuling-tour.html</a>
+                                        <br />
+                                        <br />
+                                </font>
+                        </p>
+                </li>
+                <li>
+                        <article>{{'transport.notice'|translate}}:</article>
+                        <ul class="notice">
+                                <li>{{'transport.notice_01'|translate}}</li>
+                                <li>{{'transport.notice_02'|translate}}</li>
+                                <li>{{'transport.advice'|translate}}</li>
+                        </ul>
+                        <!-- <h2>1.{{'transport.notice_01'|translate}}</h2>
+                        <h2>2.{{'transport.notice_02'|translate}}:</h2> -->
 
-                                    <strong>{{'transport.lion_bus'|translate}}</strong>
-                                    <br />
-                                    <strong>{{'transport.lion_website'|translate}}:</strong>
-                                    <a href="https://www.liontravel.com/promotion/bus/forest-tour/wuling-tour.html" target="_blank">https://www.liontravel.com/promotion/bus/forest-tour/wuling-tour.html</a>
-                                    <br />
-                            </font>
-                    </h2>
-            </li>
-            <li>
-                    <h1>{{'transport.notice'|translate}}:</h1>
-                    <h2>1.{{'transport.notice_01'|translate}}</h2>
-                    <h2>2.{{'transport.notice_02'|translate}}:</h2>
-
-            </li>
-    </ul>
+                </li>
+        </ul>
 
 </div>
