--- a/src/app/itinerary/itinerary.component.html
+++ b/src/app/itinerary/itinerary.component.html
@@ -7,8 +7,8 @@
         <li>
             <div>第一天</div>
             <p>
-                下午在南谷閒步或搭乘北谷遊園巴士導覽(自費行程每人費用150元)、蔣公行館、茶園登高、參考農莊文物館、雪霸遊客中心。
-                <br>晚間楓林小館品嚐咖啡、參觀文化遺址展室(賓館二樓，每天免費開放)、聆聽現場演奏高山音樂會(富野渡假村2樓，每晚20:30~21:30免費)、觀星活動(富野富野渡假村2樓，每晚21:30~22:30)。
+                下午在南谷閒步或搭乘北谷遊園巴士導覽(自費行程每人費用150元)、蔣公行館(須搭配南谷行程)、茶園登高、參觀農莊文物館、雪霸遊客中心。
+                <br>晚間聆聽現場演奏高山音樂會(富野渡假村2樓，每晚20:30~21:30免費)、觀星活動(富野富野渡假村2樓，每晚21:30~22:30)。
             </p>
         </li>
         <li>
@@ -31,7 +31,7 @@
             <div>第一天</div>
             <p>
                 下午場區閒步或搭乘北谷遊園巴士導覽(自費行程每人費用150元)、茶園步道、參觀農莊文物館、雪霸遊客中心、台灣櫻花鉤吻鮭生態中心。
-                <br> 晚間參觀畫展、文化遺址展示館(賓館2樓，每天免費開放)、聆聽現場演奏高山音樂會(富野渡假村2樓，每晚20:30~21:30免費)、觀星活動(富野渡假村2樓，每晚21:30~22:30)。
+                <br> 晚間聆聽現場演奏高山音樂會(富野渡假村2樓，每晚20:30~21:30免費)、觀星活動(富野渡假村2樓，每晚21:30~22:30)。
             </p>
         </li>
         <li>
@@ -48,7 +48,7 @@
                 第三天
             </div>
             <P>
-                上午南谷生態導覽解說、參觀生態館、蔣公行館、選購紀念品等，享用中餐後賦歸。
+                上午南谷生態導覽解說、參觀生態館、蔣公行館(須搭配南谷行程)、選購紀念品等，享用中餐後賦歸。
             </P>
 
         </li>
