--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class="content" [@place]="isDivVisible">
     <h1>北谷區深度導覽遊園巴士</h1>
     <div class="title">
-        北谷遊園巴士生態導覽 150元/人
+        北谷遊園巴士生態導覽 150元/人，小朋友學齡前佔位100元，不佔位免費。
     </div>
     <div>
         <div>
@@ -51,7 +51,7 @@
             </p>
             <p>
                 <br/> 南谷園區行程
-                <br/> 武陵賓館出發→迎賓橋→賞鳥步道→松林大道→蔣公行館→武陵茶莊→回賓館(全程步行，約2小時)。
+                <br/> 武陵賓館出發→迎賓橋→賞鳥步道→松林大道→蔣公行館→武陵茶莊(全程步行，約2小時)。
             </p>
         </div>
         <hr>
