--- a/src/app/real-time/weather-station/weather-station.component.scss
+++ b/src/app/real-time/weather-station/weather-station.component.scss
@@ -7,7 +7,7 @@
     }
   
   .box {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+   // font-family: Verdana, Arial, Helvetica, sans-serif;
     font-weight: normal;
     width: calc((100% /3) - 10px);
     min-width: 140px;
@@ -15,5 +15,5 @@
     vertical-align: center;
     text-align: left;
     font-size: 14px;
-    line-height:10px;
+    line-height:18px;
   }
