--- a/src/app/tea-shop/tea-shop.component.html
+++ b/src/app/tea-shop/tea-shop.component.html
@@ -2,16 +2,16 @@
     <div>
         <img src="https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/tea-shop%2Ftea-shop.jpg?alt=media&token=128eff15-0972-4192-8d1e-d7ddc97f6356" width="280" height="180" alt="武陵農場茶莊照片" />
     </div>
-    <div class="txtbox">
+    <div>
         <strong>{{'tea_saloon.name'|translate}}</strong>
-
-        <p>武陵農場旅遊服務中心主要販賣日常用品(拖鞋、牙膏等)與大眾食品(餅乾、飲料、農特產品等)。
-           <br/> 假日提供雞絲麵、貢丸湯、關東煮、肉粽等熱食。
-            
+        <p>武陵農場茶莊主要販賣以茶葉及農特產品為主，並有一些熱食提供。且提供喜愛泡茶喝的遊客，有一專屬泡茶空間，享受這自然環境孕育出來天然茶葉帶來的香韻潤喉滋味。
+           <br/> 營業時間:  每日 07:30~18:00；寒、暑假及櫻花季期間每日07:00~18:30            
         </p>
-
         <br /> {{'tea_saloon.tel'|translate}}
         <br />{{'tea_saloon.fax'|translate}}
         <br /> {{'tea_saloon.address'|translate}}
+        <br />
+        <br />
+        <br />
     </div>
 </div>
