--- a/src/app/announce/peach/peach.component.html
+++ b/src/app/announce/peach/peach.component.html
@@ -6,7 +6,9 @@
             </div>
             <div class="contain">
                 <P>{{'peach.contain'|translate}} </P>
+                <button mat-button (click)="getPrice()">{{'peach.price'|translate}}</button>
             </div>
+           
         </div>
     </div>
 </div>
