--- a/src/app/coffee-bar/coffee-bar.component.html
+++ b/src/app/coffee-bar/coffee-bar.component.html
@@ -3,15 +3,14 @@
         <img src="https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/coffee-bar%2Fcoffee-bar.jpg?alt=media&token=a834d684-4507-4c4b-9dac-a26a7d41a85c"
             width="280" height="180" alt="武陵農場旅服照片" />
     </div>
-    <div class="txtbox">
+    <div>
         <strong>森林咖啡吧</strong>
-       <p>30年樹齡的柳杉矗立在旁，喝杯武陵農場特製薰衣草奶茶，與芬多精來場森林的約會！
-
-         <br />現場提供有蛋餅、蔥抓餅、雞絲麵、意麵、披薩(5吋)、麥克雞塊、厚片、肉包、肉粽等；熱飲有奶茶、咖啡、可可、薑母茶、花茶等。
-     
-       </p>
-          <br /> {{'visitor_center.tel'|translate}}
-        <br /> {{'visitor_center.fax'|translate}}
-        <br /> {{'visitor_center.address'|translate}}
+        <p>30年樹齡的柳杉矗立在旁，喝杯武陵農場特製薰衣草奶茶，與芬多精來場森林的約會！
+            <br />現場提供有蛋餅、蔥抓餅、雞絲麵、意麵、披薩(5吋)、麥克雞塊、厚片、肉包、肉粽等；熱飲有奶茶、咖啡、可可、薑母茶、花茶等。
+        </p>
+        <br /> 專線電話：04-25901469
+        <br />
+        <br />
+        <br />
     </div>
 </div>
