--- a/src/app/dashboard/main/main.component.scss
+++ b/src/app/dashboard/main/main.component.scss
@@ -44,14 +44,14 @@
   }
 
   .hotel {  
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fhotel.jpg?alt=media&token=05b15612-7504-4953-8b5f-85f482d346b5);
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fhotel.jpg?alt=media&token=b99579ad-2881-4614-b11a-4e17ae222725);
     background-size: cover;
     margin: 8px;
     height: 240px;
   }  
 
   .camping {   
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fcampsite.jpg?alt=media&token=cd1438b3-9d19-497b-b54b-4ee4b4ba8a88);
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fcamping.jpg?alt=media&token=dd2969ca-9c4e-48cb-8708-2de8dfb6cac9 );
     background-size: cover;
     margin: 8px;
     height: 240px;   
@@ -98,55 +98,55 @@
   }
   
   .tollbooth {    
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Ftoll.jpg?alt=media&token=ecf421b3-56e0-433c-854e-33a5409cc313);
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Ftoll.jpg?alt=media&token=d4d69c3e-c1e8-4570-9cb7-c9d3264325f6);
     background-size: cover;
     background-repeat: no-repeat;
     margin: 8px;
     height: 140px;
   }
   .departure{     
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Ftrafficinfo.jpg?alt=media&token=3d31d2aa-2abe-49f4-affa-5c93621e50f9);
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fdeparture.jpg?alt=media&token=bcbfe9cb-766f-467f-b855-47f615237f30);
     background-size: cover;
     background-repeat: no-repeat;
     margin: 8px;
     height: 140px;
   }  
   .navigation{    
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4)30%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Ftourguide.jpg?alt=media&token=6330abb3-166b-40d5-ac69-c7da1fd141d6);
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4)30%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fnavigation.jpg?alt=media&token=98bc5fb0-e39b-4913-b1ba-19e102132e43);
     background-size: cover;
     margin: 8px;
     height: 140px;
   }
   .itinerary{    
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4)30%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fitinerary.jpg?alt=media&token=285a1c75-32d7-42da-9484-31dd9bb2f281);
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3)30%, rgba(255, 255, 255, 0.3) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fitinerary.jpg?alt=media&token=a893ee33-4305-41f5-b969-8bbe35d64ccc);
     background-size: cover;
     margin: 8px;
     height: 140px;
   }
 
   .tea {    
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4) 30%, rgba(255, 255, 255, 0.5) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Ftea-shop.jpg?alt=media&token=540b5cf7-8558-4a2d-9325-59d4001165cb);
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3) 30%, rgba(255, 255, 255, 0.3) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Ftea.jpg?alt=media&token=24e83524-9ba1-4c68-b559-27965d72b7ea);
     background-size: cover;
     margin: 8px;
     height: 140px;
   }
   
   .visitor {    
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4)30%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fvisitor-center.jpg?alt=media&token=cb384dd2-37ac-49a2-986e-eaad901e1180);
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3)30%, rgba(255, 255, 255, 0.3) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fvisitor.jpg?alt=media&token=21681060-508c-4e3f-8139-1fe6c44a326d);
     background-size: cover;
     margin: 8px;
     height: 140px;
   }
 
   .meeting-room {    
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3)30%, rgba(255, 255, 255, 0.5) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fmeeting-room.jpg?alt=media&token=05c45da0-01cd-4308-9945-6deb5c59e37f);
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4)30%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fmeeting-room.jpg?alt=media&token=05c45da0-01cd-4308-9945-6deb5c59e37f);
     background-size: cover;
     margin: 8px;
     height: 140px;
   }
 
   .salmon{  
-    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.4)30%, rgba(255, 255, 255, 0.4) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/coffee-bar%2Fcoffee-bar.jpg?alt=media&token=a834d684-4507-4c4b-9dac-a26a7d41a85c);
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.2)30%, rgba(255, 255, 255, 0.2) 100%), url(https://firebasestorage.googleapis.com/v0/b/mercury-object.appspot.com/o/home%2Fcoffee-bar.jpg?alt=media&token=357d93b8-1481-43db-a420-e2d3325f6295);
     background-size: cover;
     margin: 8px;
     height: 140px;
