--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -1,16 +1,12 @@
 div.content {
     max-width: 800px;  
-    text-align: left;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: normal;
+    text-align: left;  
     color: #4A4A4A;    
     margin: 0px 30px 0px 30px; 
 }
 
 div h1{
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+   // font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 20px;
     line-height: 25px;
     font-weight: normal;
