--- a/src/app/real-time/traffic-status/traffic-status.component.scss
+++ b/src/app/real-time/traffic-status/traffic-status.component.scss
@@ -1,9 +1,15 @@
-div{
-    overflow:hidden;
+div{       
     text-align: left;
     font-size: 14px;
-    line-height:18px;
-    margin: 8px;
-    
+    line-height:16px;    
+    margin: 8px 0px 0px 8px;
+    max-height: 300px ;    
     cursor: pointer; 
+}
+
+@media only screen and (max-width:480px) {
+    div {
+        font-size: 12px;
+        line-height:14px;
+  }
 }
