--- a/src/app/restaurant/restaurant.component.html
+++ b/src/app/restaurant/restaurant.component.html
@@ -45,7 +45,8 @@
                 {{'restaurant.family_style'|translate}}
             </div>
             <div>
-                11:30~14:00　 17:30~20:00
+                {{'restaurant.lunch'|translate}} 11:30~14:00　
+                <br/> {{'restaurant.dinner'|translate}} 17:30~20:00
             </div>
             <ul>
                 <li>
@@ -95,8 +96,15 @@
             <ul>
                 <li>
                     <div> {{'restaurant.buffet_price'|translate}} </div>
-                    <div> {{'restaurant.location_hotel'|translate}} </div>
+                    <div> {{'restaurant.location_hotel'|translate}} </div>   
                 </li>
+                <li>
+                    <div> {{'restaurant.buffet_note'|translate}} </div>                 
+
+                </li>
+                 
+                    
+                 
             </ul>
         </div>
     </div>
