--- a/src/app/tollbooth/tollbooth.component.scss
+++ b/src/app/tollbooth/tollbooth.component.scss
@@ -1,16 +1,12 @@
 div.content {
-    text-align: left;
-    font-family: Verdana, Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: normal;
+    text-align: left;  
     color: #4A4A4A;
   }
 
   div h1{
-  font-family: Verdana, Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  line-height: 25px;
+ // font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 26px;
   font-weight: normal;
   color: #603A0A;
   background-color: #D5D5D5;    
@@ -26,13 +22,12 @@ div.content {
       font-size: 14px;
   }
   table {
-    max-width: 800px;
-    font-size: 14px;
+    max-width: 800px;    
     text-align:center;
   }
   
   th {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+   // font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size:14px;
     line-height: 20px;
     font-weight: normal;
@@ -46,7 +41,7 @@ div.content {
   }
   
   td {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    //font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 14px;
     line-height: 20px;
     font-weight: normal;
@@ -60,7 +55,7 @@ div.content {
   
   ul{
       list-style-type:decimal;
-      border:0px;
+      padding: 0px;
   }
   
   @media only screen and (max-width:1200px) {  
